force-app/main/default/objects/Sales_Scorecard__c/Sales_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Sales Scorecard</label>
    <nameField>
        <displayFormat>SSN - {0000}</displayFormat>
        <label>Sales Scorecard Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Scorecard</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>