force-app/main/default/objects/Sales_Scorecard__c/fields/Avg_Deal_Size_Target__c.field-meta.xml
<CustomField>
    <fullName>Avg_Deal_Size_Target__c</fullName>
    <description>Weekly deal size target for a sales user. Request from leadership SOP-3547</description>
    <label>Avg. Deal Size Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>