force-app/main/default/objects/Sales_Scorecard__c/fields/Avg_New_in_Pipe_Amount__c.field-meta.xml
<CustomField>
    <fullName>Avg_New_in_Pipe_Amount__c</fullName>
    <description>Weekly new in pipe target for a sales user. Request from leadership SOP-3547</description>
    <label>Avg. New in Pipe Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>