force-app/main/default/objects/Sales_Scorecard__c/fields/Avg_Order_Intake_Target__c.field-meta.xml
<CustomField>
    <fullName>Avg_Order_Intake_Target__c</fullName>
    <description>Weekly avg order intake target for a sales user. Request from leadership SOP-3547</description>
    <label>Avg. Order Intake Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>