force-app/main/default/objects/Sales_Scorecard__c/fields/Meeting_Count_Target__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Count_Target__c</fullName>
    <description>Weekly meeting count target for a sales user. Request from leadership SOP-3547</description>
    <label>Meeting Count Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>