force-app/main/default/objects/Sales_Scorecard__c/fields/Outbound_E_Mail_Target__c.field-meta.xml
<CustomField>
    <fullName>Outbound_E_Mail_Target__c</fullName>
    <description>Weekly outbound email target for a sales user. Request from leadership SOP-3547</description>
    <label>Outbound E-Mail Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>