force-app/main/default/objects/Sales_Scorecard__c/fields/Win_Rate_Target__c.field-meta.xml
<CustomField>
    <fullName>Win_Rate_Target__c</fullName>
    <description>Weekly win rate target for a sales user. Request from leadership SOP-3547</description>
    <label>Win Rate Target</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>